# MinimumNDK

./: .clang-format  .gitignore  build.gradle  settings.gradle
minimum-ndk/: build.gradle
minimum-ndk/src/main/: AndroidManifest.xml
minimum-ndk/src/main/cpp/: CMakeLists.txt  Context.cpp  Context.hpp  Core.cpp  Core.hpp  main.cpp
minimum-ndk/src/main/res/values/: strings.xml
